--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -1,22 +1,22 @@
-.navbar{
+.navbar {
   padding: 20px 50px;
   background: transparent;
-  -webkit-transition: background 2s; 
+  -webkit-transition: background 2s;
   transition: background 2s;
 }
-.navbar:hover{
+.navbar:hover {
   background: rgb(255, 255, 255);
 }
-.leftNav{
+.leftNav {
   display: flex;
   gap: 30px;
   align-items: center;
 }
 
-.headerDrop1:hover .dropMenu{
+.headerDrop1:hover .dropMenu {
   display: block;
 }
-.headerLeftBtn{
+.headerLeftBtn {
   border-radius: 50px;
   padding: 5px 30px;
   background: transparent;
@@ -26,28 +26,26 @@
   font-weight: 500;
   font-size: 18px;
 }
-.headerLeftBtn:hover{
+.headerLeftBtn:hover {
   box-shadow: none;
   background: transparent;
   color: rgb(255, 255, 255);
   border: 2px solid gray;
-  
 }
-.navbar:hover .headerLeftBtn{
+.navbar:hover .headerLeftBtn {
   color: black;
   border: 2px solid gray;
-  
 }
-.dropBtn{
+.dropBtn {
   color: white;
   font-size: 18px;
   font-weight: normal;
   line-height: 24px;
 }
-.navbar:hover .dropBtn{
+.navbar:hover .dropBtn {
   color: rgb(0, 0, 0);
 }
-.headerRightBtn{
+.headerRightBtn {
   border-radius: 50px;
   padding: 5px 20px;
   background: #ffc600;
@@ -55,34 +53,41 @@
   font-weight: 500;
   font-size: 18px;
   border: none;
-  transition: transform 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s, box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s, border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s;
+  transition: transform 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s,
+    box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s,
+    border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s;
 }
-.headerRightBtn:hover{
+.headerRightBtn:hover {
   box-shadow: none;
 }
-.navbar:hover  .headerRightBtn{
+.navbar:hover .headerRightBtn {
   box-shadow: 0px 3px 0px #181818;
   background: #ffc600;
   color: black;
 }
 
-.rightNav{
+.rightNav {
   display: flex;
   gap: 10px;
   align-items: center;
   justify-content: flex-end;
 }
-.navRightMenu{
+.navRightMenu {
   color: white;
   font-size: 18px;
 }
-.navbar:hover .navRightMenu{
+
+.navRightMenu a {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar:hover .navRightMenu {
   color: rgb(9, 9, 9);
   font-size: 18px;
 }
- 
 
-.dropMenu{
+.dropMenu {
   display: none;
   position: absolute;
   background-color: #fff;
@@ -95,23 +100,23 @@
   padding: 50px 0;
 }
 
-.dropMenu::before{
-content: "";
-height: 100px;
-width: 34vw;
-color: rgb(255, 255, 255);
-position: absolute;
-left: 100px;
-z-index: 1111;
-top: -46px;
+.dropMenu::before {
+  content: "";
+  height: 100px;
+  width: 34vw;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  left: 100px;
+  z-index: 1111;
+  top: -46px;
 }
-.headerMenu h3{
+.headerMenu h3 {
   font-size: 28px;
   font-weight: 300;
   color: #c6c6c6;
   margin-bottom: 40px;
 }
-.headerMenu a{
+.headerMenu a {
   font-size: 20px;
   font-weight: 500;
   color: #484848;
@@ -119,12 +124,12 @@ top: -46px;
   display: block;
   text-decoration: none;
 }
-.headerMenu a:hover{
+.headerMenu a:hover {
   translate: 5px;
-    transition-duration: 0.2s;
-    color: #e74a50;
+  transition-duration: 0.2s;
+  color: #e74a50;
 }
-.headerDrop2BG{
+.headerDrop2BG {
   background: #f6f6f6;
   padding: 40px 0;
 }
