--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -87,26 +87,27 @@
 .heroImg1 {
   position: absolute;
   left: 70px;
-  bottom: -140px;
+  bottom: -175px;
   width: 350px;
 }
 .heroImg2 {
   position: absolute;
   left: -320px;
-  bottom: -140px;
+  bottom: -175px;
   width: 650px;
 }
 .heroImg3 {
   position: absolute;
   right: 20px;
-  bottom: -140px;
+  bottom: -175px;
   width: 450px;
 }
 .heroImg4 {
   position: absolute;
   right: -180px;
-  bottom: -140px;
+  bottom: -175px;
   width: 500px;
+  display: none;
 }
 
 .heroVideo {
