--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -1,10 +1,11 @@
 /* 1. MainHeading */
 .MainHeading {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 .MainHeading_Container {
   display: flex;
-  padding: 40px;
+  justify-content: center;
+  padding-inline: 50px;
 }
 .MainHeading_Title {
   font-size: 120px;
@@ -27,7 +28,7 @@
   line-height: 60.8px;
 }
 .MainHeading_Image {
-  margin-left: -100px;
+  margin-left: -150px;
   z-index: -2;
 }
 @media screen and (max-width: 799px) {
@@ -38,7 +39,7 @@
 
 /* 2. MainContentOne */
 .MainContentOne {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 .MainContentOne_Container {
   font-size: 28px;
@@ -79,7 +80,7 @@
 
 /* 4. MainContentTwo */
 .MainContentTwo {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 .MainContentTwo_Container p {
   font-size: 28px;
@@ -89,13 +90,13 @@
 
 /* 5. ResultTable */
 .ResultTable {
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 .ResultTable_Title {
   font-size: 62px;
   font-weight: 700;
   line-height: 55.8px;
-  margin-bottom: 90px;
+  margin-bottom: 100px;
 }
 .ResultTable_Table {
   background-color: #ffffff;
@@ -106,6 +107,8 @@
 }
 .ResultTable_Table_Row {
   padding-inline: 20px;
+  display: flex;
+  align-items: center;
 }
 .ResultTable_Table_Row_Content {
   font-size: 26px;
@@ -129,7 +132,7 @@
 
 /* 6. Strategy */
 .Strategy {
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 .Strategy_Title {
   font-size: 60px;
@@ -144,6 +147,9 @@
   gap: 5em;
 }
 .Strategy_Card {
+  flex-basis: 0%;
+  flex-grow: 1;
+  flex-shrink: 1;
   display: flex;
   flex-direction: column;
 }
@@ -162,6 +168,7 @@
   color: #515151;
   font-weight: 500;
   line-height: 24px;
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 .Strategy_Card_Content_Two {
@@ -201,10 +208,12 @@
   line-height: 24px;
   text-align: center;
   padding: 25px 20px;
+  border: none;
 }
 
 /* 8. ResultMax */
 .ResultMax {
+  margin-bottom: 120px;
 }
 .ResultMax_Title {
   color: #333333;
@@ -238,6 +247,9 @@
   display: flex;
   justify-content: center;
 }
+.Analysis_Card_Content_Odd {
+  text-align: right;
+}
 .Analysis_Card_Content_Title {
   color: #373737;
   font-size: 40px;
@@ -254,6 +266,13 @@
   margin-bottom: 25px;
   display: flex;
   gap: 20px;
+}
+.Analysis_Card_Content_Table_Odd {
+  margin-bottom: 25px;
+  display: flex;
+  gap: 20px;
+  text-align: left;
+  justify-content: flex-end;
 }
 .Analysis_Card_Content_Table_Column {
   display: flex;
@@ -381,6 +400,7 @@
   display: flex;
   gap: 20px;
   justify-content: space-around;
+  align-items: center;
 }
 .ImageAdvantage_Table_Column {
   display: flex;
@@ -451,11 +471,13 @@
 /* 14. Branding */
 .Branding {
   display: flex;
+  margin-bottom: 130px;
 }
 .Branding_Container {
   display: flex;
   padding-inline: 100px;
   justify-content: center;
+  align-items: center;
 }
 .Branding_Content_Container {
   display: flex;
@@ -478,27 +500,270 @@
 
 /* 15. QuoteTwo */
 .QuoteTwo {
-  display: none;
+  margin-bottom: 140px;
+}
+.QuoteTwo_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: center;
+  margin-bottom: 80px;
+}
+.QuoteTwo_TextOne {
+  color: #333333;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 53.2px;
+}
+.QuoteTwo_TextTwo {
+  color: #333333;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 53.2px;
+}
+.QuoteTwo_Image {
+  overflow: hidden;
+  max-width: 100%;
+  height: 1044;
+  position: relative;
 }
 
 /* 16. OurClients */
 .OurClients {
-  display: none;
+  margin-bottom: 150px;
+}
+.OurClients_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: center;
+  margin-bottom: 250px;
+}
+.OurClients_Card_One {
+  background-color: #ffffff;
+  border-radius: 25.6px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  padding-inline: 180px;
+  padding-block: 110px;
+}
+.OurClients_Card_One_Title {
+  font-size: 38.4px;
+  font-weight: 600;
+  line-height: 46.08px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.OurClients_Card_One_Content {
+  font-size: 25.6px;
+  font-weight: 300;
+  line-height: 30.72px;
+  padding-inline: 40px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.OurClients_Card_One_Button_Container{
+  display: flex;
+  justify-content: center;
+}
+.OurClients_Card_One_Button {
+  border: 4px solid #ffc602;
+  border-radius: 256px;
+  background-color: #ffc602;
+  color: black;
+  font-size: 25.6px;
+  font-weight: 700;
+  line-height: 30.72px;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 7.68px 25.6px;
+}
+.OurClients_Card_One_Button:hover {
+  background-color: transparent;
+  color: #ffc602;
+}
+.OurClients_Card_Two {
+  display: flex;
+  align-items: center;
+  background-color: #e3e3e3;
+  border-radius: 0px 0px 25.6px 25.6px;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.15) 4px 4px 15px 0px, #ffffff 0px 0px 0px 0px,
+    #ffffff 2px 2px 2px 0px inset, #c7c7c7 -2px -2px 2px 0px inset;
+  padding-inline: 50px;
+  padding-block: 30px;
+}
+.OurClients_Card_Two_Content{
+	color: #8F8F8F;
+	font-size: 23.04px;
+	line-height: 34.56px;
+	transform: matrix(1, 0, 0, 1, 38.4, 0);
+}
+.YellowMark{
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #FFC602);
+	border-radius: 10.0147px;
+	display: inline-block;
+	font-size: 38.4px;
+	font-weight: 600;
+	line-height: 34.56px;
+	text-align: center;
+}
+.YelloMarkReverse{
+  background-image: linear-gradient(90deg, #FFD042, #FFDC74);
+	border-radius: 6.00883px;
+	color: #EEEEEE;
+	display: inline-block;
+	font-size: 23.04px;
+	font-weight: 600;
+	line-height: 20.736px;
 }
 
 /* 17. Price */
 .Price {
-  display: none;
+  margin-bottom: 100px;
+}
+.Price_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+.Price_Container {
+  padding-inline: 40px;
+}
+.Price_Card_Container {
+  display: flex;
+  justify-content: center;
+  gap: 45px;
+}
+.Price_Card {
+  flex-basis: 0%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  display: flex;
+  flex-direction: column;
+}
+.Price_Card_Number {
+  color: #b6b6b6;
+  font-size: 128px;
+  font-weight: 700;
+  line-height: 192px;
+  text-align: center;
+  margin-bottom: -45px;
+}
+.Price_Card_Main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 30px 20px;
+  flex: 1;
+}
+.Price_Card_Main_Title {
+  color: #333333;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.Price_Card_Main_TextOne {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 25.5px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.Price_Card_Main_ContentOne {
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 25.5px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.Price_Card_Main_TextTwo {
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 25.5px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.Price_Card_Main_ContentTwo {
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 25.5px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.Price_Card_Main_Footer {
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 15.125px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.Price_Card_Main_Button {
+  background-color: #4e7c1d;
+  border: 2px solid #4e7c1d;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0) 0px 0px 0px 0px;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 0.8;
+  padding: 10px 20px;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 /* 18. StrategyAction */
 .StrategyAction {
-  display: none;
+  margin-bottom: 150px;
+}
+.StrategyAction_Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-inline: 60px;
+}
+.StrategyAction_Content_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: left;
+  margin-bottom: 40px;
+}
+.StrategyAction_Content_TextOne {
+  color: #333333;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 27px;
+  margin-bottom: 40px;
+}
+.StrategyAction_Content_TextTwo {
+  color: #333333;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 27px;
 }
 
 /* 19. AnswerAll */
-.AnswerAll {
-  display: none;
+.AnswerAll_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: center;
+  margin-bottom: 35px;
 }
 
 /* 20. Accordion */
@@ -506,6 +771,7 @@
   display: none;
 }
 
+/* My Custom */
 .content {
   --gap: clamp(1rem, 6vw, 3rem);
   --content: min(77ch, 100% - var(--gap) * 2);
