--- a/src/components/organisms/facts/facts-container/factsContainer.css
+++ b/src/components/organisms/facts/facts-container/factsContainer.css
@@ -1,5 +1,6 @@
 .fc_sec {
   padding: 100px;
+  color: #3f3f3f;
 }
 
 .fact_container {
@@ -14,12 +15,12 @@
   margin: 0 auto;
   background-color: white;
   position: relative;
-  margin-bottom: -60px;
+  margin-bottom: -70px;
 }
 
 .facts_title_card {
   padding: 30px;
-  border-radius: 30px;
+  border-radius: 40px;
   width: 70%;
   margin: 0 auto;
   min-height: 300px;
@@ -29,14 +30,14 @@
   background-color: #f3f3f3;
 }
 .facts_title_card h2 {
-  font-size: 50px;
+  font-size: 48px;
   margin-top: 60px;
 }
 
 .fact_container p {
-  font-size: 24px;
-  font-weight: 300;
+  font-size: 22px;
+  font-weight: 400;
   width: 75%;
   margin: 40px auto;
-  text-align: justify;
+  text-align: left;
 }
