--- a/src/app/kalkulator/calculator.css
+++ b/src/app/kalkulator/calculator.css
@@ -16,7 +16,7 @@
   font-weight: 300;
   line-height: 1.8;
   font-size: 28px;
-  text-align: justify;
+  text-align: left;
 }
 
 .first-card {
@@ -28,8 +28,8 @@
 }
 
 .first-card p {
-  font-weight: 600;
-  font-size: 16px;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 .second-card {
@@ -39,28 +39,30 @@
 
 .second-card h2 {
   font-weight: 900;
-  font-size: 50px;
+  font-size: 65px;
 }
 
 .second-card h3 {
   font-weight: 900;
-  font-size: 30px;
+  font-size: 32px;
 }
 
 .second-card p {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   color: gray;
+  margin-top: 16px;
 }
 
 input {
   border: none;
   border-bottom: 1px dotted;
   text-align: right;
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 45px;
+  font-weight: 900;
   width: 11rem;
   background: none;
+  color: #038fa5;
 }
 
 input:focus {
@@ -68,8 +70,48 @@ input:focus {
 }
 
 .custom-range {
-  height: 6px;
+  height: 8px;
   outline: none;
   border: none;
   border-radius: 5px;
+}
+
+/* custom range styles */
+input[type="range"] {
+  overflow: hidden;
+  width: 100%;
+  -webkit-appearance: none;
+  background-color: #b7e7ec;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 8px;
+  -webkit-appearance: none;
+  color: #13bba4;
+  margin-top: -1px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  width: 10px;
+  -webkit-appearance: none;
+  height: 10px;
+  cursor: pointer;
+  background: #0091a2;
+  box-shadow: -80px 0 0 80px #3f4b5c;
+  border-radius: 50%;
+}
+
+/** FF*/
+input[type="range"]::-moz-range-progress {
+  background-color: #3f4b5c;
+}
+input[type="range"]::-moz-range-track {
+  background-color: #b7e7ec;
+}
+/* IE*/
+input[type="range"]::-ms-fill-lower {
+  background-color: #3f4b5c;
+}
+input[type="range"]::-ms-fill-upper {
+  background-color: #b7e7ec;
 }
