--- a/src/app/kalkulator/calculator.css
+++ b/src/app/kalkulator/calculator.css
@@ -58,7 +58,7 @@
   margin-top: 16px;
 }
 
-input {
+.calc_input {
   border: none;
   border-bottom: 1px dotted;
   text-align: right;
@@ -69,7 +69,7 @@ input {
   color: #038fa5;
 }
 
-input:focus {
+.calc_input:focus {
   outline: none;
 }
 
@@ -88,21 +88,13 @@ input[type="range"] {
   background-color: #b7e7ec;
 }
 
-input[type="range"]::-webkit-slider-runnable-track {
-  height: 8px;
-  -webkit-appearance: none;
-  color: #13bba4;
-  margin-top: -1px;
-}
-
 input[type="range"]::-webkit-slider-thumb {
   width: 10px;
   -webkit-appearance: none;
   height: 10px;
   cursor: pointer;
   background: #0091a2;
-  box-shadow: -80px 0 0 80px #3f4b5c;
-  border-radius: 50%;
+  box-shadow: -100px 0 0 100px #3f4b5c;
 }
 
 /** FF*/
